Generic Magnolia build